# urban-occlusion-aware-depth-estimation

./: .gitignore  DELIVERABLES.md  FINAL_SUMMARY.txt  FIXES_APPLIED.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  conftest.py  pyproject.toml  requirements.txt  test_import.py  verify_project.py
.github/workflows/: ci.yml  release.yml
configs/: default.yaml  quick_test.yaml  test.yaml
results/: results.json
scripts/: evaluate.py  train.py
src/urban_occlusion_aware_depth_estimation/: __init__.py
src/urban_occlusion_aware_depth_estimation/evaluation/: __init__.py  metrics.py
src/urban_occlusion_aware_depth_estimation/models/: __init__.py  model.py
src/urban_occlusion_aware_depth_estimation/training/: __init__.py  trainer.py
src/urban_occlusion_aware_depth_estimation/utils/: __init__.py  config.py
test_results/: config.yaml  final_metrics.json
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
